TF validation works

--- a/_WebPageDesign.html
+++ b/_WebPageDesign.html
@@ -112,10 +112,10 @@
     <div id="TF" style="display: none;">
         <h2 id="TFQuestion"></h2>
         <form>
-            <input type="radio" id="optionTrue" name="TF" value="True">
+            <input type="radio" id="optionTrue" name="TF" value="a">
             <label id="trueText" for="optionTrue"></label><br><br>
 
-            <input type="radio" id="optionFalse" name="TF" value="False">
+            <input type="radio" id="optionFalse" name="TF" value="b">
             <label id="falseText" for="optionFalse"></label><br><br>
         </form> <br>
         
