rewrote DualRand option text

--- a/_WebPageDesign.html
+++ b/_WebPageDesign.html
@@ -22,7 +22,7 @@
             <li><a id="topic2" onclick="loadTypeList('OOD')"></a></li>
             <li><a id="topic3" onclick="loadTypeList('SE')"></a></li>
             <li><a id="topic4" onclick="loadTypeList('VC')"></a></li>
-            <li><a id="randTopic" onclick="QuestionSelector('FullyRand')">Random Topic</a></li>
+            <li><a id="randTopic" onclick="QuestionSelector('FullyRand')">Random Topic and Question Type</a></li>
         </ul>
     </div>
 
